Ajout du plan de lancement RJB Coin

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
         <p><span id="total-collected">0</span> USDT</p>
     </section>
 
+<section class="roadmap">
+
+    <h2>📅 Plan de Lancement - RJB Coin</h2>
+    <ul>
+        <li><strong>Juillet 2025 :</strong> Lancement de la prévente publique RJB Coin</li>
+        <li><strong>Août 2025 :</strong> Ouverture du minage RJB pour les utilisateurs</li>
+        <li><strong>Septembre 2025 :</strong> Cotation de RJB sur DEX et CEX partenaires</li>
+        <li><strong>Octobre 2025 :</strong> Lancement du Wallet Mobile RJB</li>
+        <li><strong>Décembre 2025 :</strong> DAO communautaire et fonctionnalités avancées (staking, NFT Pass)</li>
+    </ul>
+</section>
+
     <footer>
         <p>© 2025 RJB Blockchain. Tous droits réservés.</p>
     </footer>
