Ajout du formulaire email et témoignages

--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
         <p><span id="total-collected">0</span> USDT</p>
     </section>
 
+<section class="community">
+    <h2>🗣️ Témoignages de la communauté</h2>
+    <div class="testimonials">
+        <blockquote>
+            “RJB Coin va révolutionner l'économie numérique. Le projet est solide.”  
+            <span>– Alice, Développeuse Blockchain</span>
+        </blockquote>
+        <blockquote>
+            “J’ai participé dès le premier jour, et je suis confiant sur le long terme.”  
+            <span>– Karim, Investisseur crypto</span>
+        </blockquote>
+        <blockquote>
+            “Simple, rapide et transparent. Ce token est prometteur !”  
+            <span>– Sophie, Utilisatrice</span>
+        </blockquote>
+    </div>
+</section>
+
 <section class="roadmap">
 
     <h2>📅 Plan de Lancement - RJB Coin</h2>
@@ -60,6 +78,16 @@
         <li><strong>Octobre 2025 :</strong> Lancement du Wallet Mobile RJB</li>
         <li><strong>Décembre 2025 :</strong> DAO communautaire et fonctionnalités avancées (staking, NFT Pass)</li>
     </ul>
+</section>
+
+<section class="newsletter">
+    <h2>📬 Restez informé des actualités RJB Coin</h2>
+    <p>Entrez votre email pour recevoir des informations exclusives sur le projet.</p>
+    <form id="newsletter-form">
+        <input type="email" id="email" placeholder="Votre adresse email" required>
+        <button type="submit">S'inscrire</button>
+    </form>
+    <p id="email-message" class="note"></p>
 </section>
 
     <footer>
