Ajout du formulaire email et témoignages

--- a/confirmation.html
+++ b/confirmation.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Merci pour votre achat</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Paiement Confirmé - RJB Coin</title>
+  <style>
+    body {
+      background: #111;
+      color: #fbd307;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 100px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>✅ Merci pour votre participation à la prévente RJB Coin !</h1>
-    </header>
-    <section>
-        <p>Votre transaction a bien été enregistrée. Vous recevrez vos RJB Coins dès la fin de la prévente.</p>
-        <a href="index.html">← Revenir à l'accueil</a>
-    </section>
+  <h1>✅ Paiement reçu !</h1>
+  <p>Merci pour votre participation à la prévente RJB Coin.</p>
+  <a href="index.html" style="color: white;">⬅ Retour</a>
 </body>
 </html>
 
